version/0.20/_sources/api/solver/_autosummary/settings/free_surface_level.rst.txt
:orphan:

.. _free_surface_level:

free_surface_level
==================

.. autoclass:: ansys.fluent.core.solver.settings_241.free_surface_level.free_surface_level
    :show-inheritance:

.. rubric:: Attributes

==================================   =======================================================

Attribute                                                                            Summary

==================================   =======================================================
:ref:`option <option_8>`                 Specify how the boundary condition will be defined.

:ref:`value <value_4>`                              Specify value as constant or expression.

:ref:`profile_name <profile_name>`                          Specify the name of the profile.

:ref:`field_name <field_name>`                                Specify the name of the field.

:ref:`udf <udf>`                              Specify the name of the user-defined function.

==================================   =======================================================

.. rubric:: Included in:

================================   =======================

Parent                                             Summary

================================   =======================
:ref:`multiphase <multiphase_3>`       Help not available.

:ref:`multiphase <multiphase_4>`       Help not available.

:ref:`multiphase <multiphase_6>`       Help not available.

================================   =======================

