version/0.27/_sources/api/solver/_autosummary/settings/free_surface_level.rst.txt
:orphan:

.. _free_surface_level:

free_surface_level
==================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.free_surface_level
    :show-inheritance:

.. rubric:: Attributes

==================================   =======================================================

Attribute                                                                            Summary

==================================   =======================================================
:ref:`option <option_31>`                Specify how the boundary condition will be defined.

:ref:`value <value_17>`                             Specify value as constant or expression.

:ref:`profile_name <profile_name>`                          Specify the name of the profile.

:ref:`field_name <field_name>`                                Specify the name of the field.

:ref:`udf <udf>`                              Specify the name of the user-defined function.

==================================   =======================================================

.. rubric:: Included in:

==================================   ============================================================

Parent                                                                                    Summary

==================================   ============================================================
:ref:`multiphase_2 <multiphase_2>`                                           Multiphase settings.

:ref:`multiphase_3 <multiphase_3>`       Allows to change multiphase model variables or settings.

:ref:`multiphase_6 <multiphase_6>`       Allows to change multiphase model variables or settings.

==================================   ============================================================

